--- a/Perfil-proyecto/style.css
+++ b/Perfil-proyecto/style.css
@@ -11,7 +11,9 @@ html
 }
 .attribution 
 { 
-    font-size: 11px; 
+    width: 100%;
+    height: 10px;
+    font-size: 15px; 
     text-align: center;
     position: relative;
     top: 40rem;
@@ -47,4 +49,82 @@ html
     background-image: url("./images/bg-pattern-card.svg");
     background-size: contain;
     border-radius: 1rem 1rem 0rem 0rem;
+}
+.logo
+{
+    width: 110px;
+    height: 110px;
+    background-image: url("./images/image-victor.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-radius: 100%;
+    border: 1rem white solid;
+    position: relative;
+    bottom: 5rem;
+    margin: 0 auto;
+
+}
+h1
+{
+    font-size: 17px;
+    color: hsl(0, 0%, 59%);
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: normal;
+
+}
+p
+{
+    font-size: 18px;
+    color: black;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+}
+span
+{
+    color: hsl(0, 0%, 59%);
+    font-weight: normal;
+}
+.nombre
+{
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    position: relative;
+    bottom: 2rem;
+}
+.like section
+{
+    width: 33%;
+    height: 100%;
+    text-align: center;
+    margin-top: 4rem;
+}
+.like
+{
+    display: flex;
+    border-top: ridge 0.2px;
+}
+.like section p
+{
+    font-weight: bold;
+
+}
+.like section span
+{
+    font-size: 15px;
+}
+@media (max-width: 600px)
+{
+    .perfil
+    {
+        top: 20rem;
+        width: 500px;
+        height: 500px;
+    }
+    
+    .fondo
+    {
+        background-position-x: -70rem, 30rem ;
+        background-position-y: -49rem, 60rem;
+    }
 }
