--- a/Figma2/style.css
+++ b/Figma2/style.css
@@ -28,59 +28,53 @@ body
 {
     display: flex;
     flex-direction: column;
+
 }
 .caja1
 {
-    width: 375px;
-    height: 315px;
+    width: 100%;
+    height: 25rem;
+    margin: 0 auto;
+    margin-top: 3rem;
 }
 .Titulo
 {
-    width: 287px;
-    height: 116px;
+    width: 100%;
+    height: 11.6rem;
     font-family: Spartan-bold;
     color: rgba(80, 32, 80, 1);
-    font-size: 34px;
+    font-size: 3.4rem;
     margin: 0 auto;
+    margin-bottom: 2rem;
     text-align: center;
-    position: absolute;
-    left: 12.53%;
-    right: 10.93%;
-    top: 8%;
-    bottom: 87.45%;
     font-style: normal;
-    line-height: 38px;
+    line-height: 3.8rem;
 
 }
 .texto
 {
-    width: 321px;
-    height: 87px;
+    width: 90%;
+    height: 10rem;
     font-family: Spartan;
     color: rgba(147, 123, 146, 1);
-    font-size: 14px;
+    font-size: 1.4rem;
     margin: 0 auto;
     text-align: center;
-    position: absolute;
-    left: 7.47%;
-    right: 6.93%;
-    top: 26%;
-    bottom: 80.46%;
-    line-height: 24px;
+    line-height: 2.4rem;
     font-style: normal;
 }
 .caja2
 {
-    width: 375px;
-    height: 262px;
+    width: 100%;
+    height: 26.2rem;
     margin: 0 auto;
-    margin-top: 5rem;
+    
 }
 .box
 {
-    width: 345px;
-    height: 76px;
-    border-radius: 40px;
+    width: 90%;
+    height: 7.6rem;
+    border-radius: 4rem;
     background-color: rgba(247, 242, 248, 1);
     margin: 0 auto;
     display: flex;
@@ -89,25 +83,26 @@ body
 }
 .caja2 div
 {
-    margin-bottom: 17px;
+    margin-bottom: 1.7rem;
 }
 .estrella
 {
     background-image: url("./Imagenes/estrellas.png");
     background-repeat: no-repeat;
     background-size: contain;
-    width: 115px;
-    height: 20px;
+    width: 11.5rem;
+    height: 2rem;
     margin: 0 auto;
+    margin-bottom: 0.5rem;
 }
 .caja2 p
 {
     width: 100%;
-    height: 15px;
+    height: 1.5rem;
     margin: 0 auto;
     color: rgba(80, 32, 80, 1);
     font-family: Spartan-bold;
-    font-size: 13px;
+    font-size: 1.3rem;
     text-align: center;
 }
 .caja2 section
@@ -116,23 +111,23 @@ body
 }
 .caja3
 {
-    width: 375px;
+    width: 100%;
     margin: 0 auto;
-    margin-top: 5rem;
+    margin-top: 2rem;
 }
 .perfil
 {
     background-color: rgba(81, 32, 81, 1);
-    width: 352px;
-    height: 233px;
-    border-radius: 20px;
+    width: 90%;
+    height: 23.3rem;
+    border-radius: 2rem;
     margin: 0 auto;
     margin-bottom: 2rem;
 }
 .par1
 {
-    width: 280px;
-    height: 105px;
+    width: 85%;
+    height: 10.5rem;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
@@ -140,24 +135,24 @@ body
 .foto1
 {
     background-image: url('./Imagenes/image-1.png');
-    width: 41px;
-    height: 41px;
+    width: 4.1rem;
+    height: 4.1rem;
     margin-top: 4rem;
     margin-right: 2rem;
 }
 .foto2
 {
     background-image: url('./Imagenes/image-2.png');
-    width: 41px;
-    height: 41px;
+    width: 4.1rem;
+    height: 4.1rem;
     margin-top: 4rem;
     margin-right: 2rem;
 }
 .foto3
 {
     background-image: url('./Imagenes/image-3.png');
-    width: 41px;
-    height: 41px;
+    width: 4.1rem;
+    height: 4.1rem;
     margin-top: 4rem;
     margin-right: 2rem;
 }
@@ -166,24 +161,24 @@ body
     font-family:Spartan-bold;
     font-size: 15px;
     color: white;
-    width: 222px;
-    height: 105px;
+    width: 22.2rem;
+    height: 4.1rem;
     margin-top: 4rem;
 }
 .par1 span
 {
     font-family: Spartan;
-    font-size: 15px;
+    font-size: 1.5rem;
     color: rgba(151, 90, 141, 1);
 }
 .par2
 {
-    width: 280px;
-    height: 105px;
+    width: 85%;
+    height: 11rem;
     margin: 0 auto;
     color: white;
     font-family: Spartan-semibold;
-    font-size: 13px;
-    line-height: 22px;
+    font-size: 1.3rem;
+    line-height: 2.2rem;
     text-align: left;
 }
